feat: add endpoint for updating task
